--- a/packages/views/welcome/Container/style.scss
+++ b/packages/views/welcome/Container/style.scss
@@ -16,6 +16,8 @@ body {
   .app-logo + p {
     font-size: 15px;
     max-width: 550px;
+    color: #a9a9a9;
+    margin-top: 10px;
   }
   
   .app-header {
@@ -33,4 +35,5 @@ body {
     color: #61dafb;
     text-decoration: none;
     font-size: 15px;
+    margin-top: 30px;
   }
